--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2014.10.30, v1.1.2
+
+fix:
+- feature(changelog) add new line after /feature
+
+feature:
+- (changelog) add new line after fix/
+
+
 2014.10.29, v1.1.1
 
 feature:
