--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2017.05.18, v2.0.0
+
+feature:
+- (changelog) drop support of node < 4: add ability to find package in parent directories
+
+
 2016.02.21, v1.4.4
 
 feature:
