--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2019.09.06, v4.0.1
+
+feature:
+- (changelog-io) add madrun
+- (package) eslint v6.3.0
+- (package) read-pkg-up v6.0.0
+- (package) eslint-plugin-node v10.0.0
+- (package) rendy v3.0.1
+
+
 2018.10.10, v4.0.0
 
 feature:
