--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2021.08.25, v6.0.0
+
+feature:
+- (package) read-pkg-up v8.0.0
+- (changelog) convert to ESM
+- (package) eslint v8.0.0-beta.0
+- (package) eslint-plugin-putout v9.2.1
+- (package) putout v19.0.0
+- (changelog) convert ot ESM
+
+
+
 2021.04.22, v5.1.3
 
 fix:
