--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2021.09.01, v6.0.5
+
+fix:
+- (changelog) fix as feature
+
+feature:
+- fix(changelog) fix as feature
+
+
 2021.08.27, v6.0.4
 
 fix:
