--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,21 @@
+2022.04.22, v7.0.0
+
+fix:
+- changelog: search only for "" or "(", same with feature
+
+
+feature:
+- changelog: drop support of node < 16
+- fix: changelog: search only for "fix: " or "fix(", same with feature
+- (package) escover v2.1.1
+- (package) supertape v7.2.3
+- (package) mock-import v3.0.1
+- (package) eslint-plugin-putout v14.11.0
+- (package) putout v25.15.0
+- (package) madrun v9.0.2
+- (package) zenload v2.0.0
+
+
 2022.01.31, v6.0.8
 
 fix:
