--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2023.03.06, v8.0.0
+
+feature:
+- changelog-io: add ability to put commit hash
+- package: supertape v8.3.0
+- package: eslint-plugin-putout v16.9.0
+- package: putout v29.0.1
+- package: eslint-plugin-putout v15.3.0
+- package: putout v26.9.1
+
 2022.04.22, v7.0.0
 
 fix:
