--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2023.06.08, v8.1.0
+
+feature:
+- 0517582 error message
+- 76c36d0 package: eslint-plugin-n v16.0.0
+- 31a2078 package: eslint-plugin-putout v17.7.0
+- 4350281 package: escover v3.3.2
+
 2023.03.06, v8.0.0
 
 feature:
