--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2023.08.15, v8.2.0
+
+feature:
+- package: eslint-plugin-putout v19.1.0
+- package: putout v31.2.0
+- package: c8 v8.0.1
+- package: read-pkg-up v10.0.0
+
 2023.06.08, v8.1.0
 
 feature:
