--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2023.10.05, v8.3.0
+
+feature:
+- 5fbc1b2 package: eslint-plugin-putout v20.0.0
+- 93aa0c4 package: putout v32.2.0
+
 2023.08.15, v8.2.0
 
 feature:
